-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Minor Change
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
In the past, the explain commands have been implicitly creating a database when the database didn't exist because they were instantiating the CollectionRoutingInfoTargeter on the mongos (which implicitly creates the db if it doesn't exist).
This made the explain operations run always against an existing database.
When we started using the CollectionRouter to coordinate the collection routing under SERVER-103705 and SERVER-103706, it was necessary to explicitly create the database as one of the first steps of the explain operation on the mongos.
The goal of this task is to be able to respond an explain command without creating the database if it doesn't exist.
- depends on
-
SERVER-103706 Get rid of the stale errors handling on strategy.cpp
-
- Closed
-
- is depended on by
-
TOOLS-4111 Investigate changes in SERVER-108882: Explain operations should not implicitly create a database on a sharded cluster
- Closed
- is related to
-
SERVER-120673 Write explain operations should not implicitly create a database on a sharded cluster
-
- Closed
-
-
SERVER-103705 Explicitly use RouterRole on mongos commands
-
- Closed
-
- related to
-
SERVER-120188 Inaccurate num keys scanned estimate for trivial queries
-
- Closed
-
-
SERVER-121083 Fix vector_search_nonexistent_collection.js for changes in SERVER-108882
-
- Closed
-
-
SERVER-114203 FindAndModify should only implicitly create database if upsert is true
-
- Backlog
-