SERVER-108882 Explain operations should not implicitly create a database on a sharded cluster (#48752)

GitOrigin-RevId: 0ed41d286b41d866fc80ddc27d67f30b54c0d155